# moonmen

./: .editorconfig  .flake8  .gitignore  Pipfile  README.md  moonmen.py  pyproject.toml  requirements.txt  run_moonman.py
.github/workflows/: quality.yml
moonmen/: __init__.py  __main__.py  commands.py  decorators.py  handlers.py  web.py
moonmen/db/: _schema.sql  base.py  utils.py
moonmen/static/css/: login.css  prism.css  styles.css
moonmen/static/js/: feather.min.js  prism.js
moonmen/templates/: dashboard.html  files.html  home.html  layout.html  login.html  notes.html  paste.html  resources.html  tasks.html  timers.html
moonmen/templates/auth/: change_password.html  login.html
moonmen/templates/base/: layout.html
moonmen/views/: auth.py  dashboard.py  files.py  notes.py  tasks.py  timers.py
