[tool.poetry]
name = "moonmen"
version = "0.2.0"
description = "Pain-free self-hosted project management app for small teams"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
Flask = "^2.0.2"
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
bandit = "^1.7.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
